--- a/app/config/streams/conf.example
+++ b/app/config/streams/conf.example
@@ -1,4 +1,10 @@
+ENABLED=1
 NAME=mycam1
 SEGMENT_TIME=01:00:00
 FILE_PREFIX=%Y-%m-%d_%H-%M-%S
 STREAM_URL=rtsp://user:password@...
+AUTO_RECORD=1
+
+MQTT_ENABLE=1
+MQTT_TOPIC=my/topic/mycam1
+MQTT_CONTROL_TOPIC=my/topic/mycam1/enable
