--- a/app/config/streams/conf.example
+++ b/app/config/streams/conf.example
@@ -1,5 +1,7 @@
-ENABLED=1
 NAME=mycam1
+ENABLED=1
+CHECK_INTERVAL=10000
+
 SEGMENT_TIME=01:00:00
 FILE_PREFIX=%Y-%m-%d_%H-%M-%S
 STREAM_URL=rtsp://user:password@...
@@ -8,3 +10,7 @@ AUTO_RECORD=1
 MQTT_ENABLE=1
 MQTT_TOPIC=my/topic/mycam1
 MQTT_CONTROL_TOPIC=my/topic/mycam1/enable
+MQTT_TOPIC_VALUE_ON=1
+MQTT_TOPIC_VALUE_OFF=0
+MQTT_CONTROL_VALUE_ON=1
+MQTT_CONTROL_VALUE_OFF=0
