--- a/app/config/streams/conf.example
+++ b/app/config/streams/conf.example
@@ -6,6 +6,7 @@ SEGMENT_TIME=01:00:00
 FILE_PREFIX=%Y-%m-%d_%H-%M-%S
 STREAM_URL=rtsp://user:password@...
 AUTO_RECORD=1
+STORAGE_AGE=P14D
 
 MQTT_ENABLE=1
 MQTT_TOPIC=my/topic/mycam1
