--- a/app/package.json
+++ b/app/package.json
@@ -8,14 +8,16 @@
     "start": "node --experimental-modules --experimental-json-modules index.js",
     "build": "npm run build:linux",
     "babelize": "node --experimental-modules --experimental-json-modules config/build/webpack-app-pkg.config.js",
-    "build:arm": "npm run babelize && node node_modules/pkg/lib-es5/bin.js dist/app.js --output app-arm64 --targets node14-linux-arm64",
+    "build:arm": "node node_modules/pkg/lib-es5/bin.js dist/app.js --output app-armv7 --targets node16-alpine-armv7",
     "build:linux": "npm run babelize && node node_modules/pkg/lib-es5/bin.js dist/app.js --output app-linux64 --targets node14-linux-x64",
     "build:win": "npm run babelize && node node_modules/pkg/lib-es5/bin.js dist/app.js --output app-win64 --targets node14-win-x64"
   },
   "author": "",
   "license": "ISC",
+  "pkg": {},
   "dependencies": {
     "@babel/plugin-syntax-import-assertions": "^7.20.0",
+    "@js-temporal/polyfill": "^0.4.3",
     "dateformat": "^5.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
