--- a/docker-compose-app.yml
+++ b/docker-compose-app.yml
@@ -1,5 +1,10 @@
 version: "3.6"
 
+volumes:
+  pkg-cache:
+    external:
+      name: ${PROJECT_NAME}_pkg-cache
+
 services:
 
   rekorder:
@@ -20,6 +25,7 @@ services:
       - /rekorder/app/node_modules
       - /rekorder/shared/node_modules
       - ${HOST_STORE_ROOT_PATH}:${STORE_ROOT_PATH}
+      - pkg-cache:/root/.pkg-cache
     environment:
       - DEBUG=true
       - ENVIRONMENT=default
