more different mqtt stuff for a stream

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ STORE_ROOT_PATH=/storage/video
 STORE_FILE_PREFIX=%Y-%m-%d__%H-%M-%S
 SEGMENT_TIME=01:00:00
 
+MQTT_ENABLE=1
 MQTT_HOST=servant
 MQTT_PORT=1886
 MQTT_CLIENT_ID=rekorder
