--- a/app/config/streams/conf.example
+++ b/app/config/streams/conf.example
@@ -10,8 +10,15 @@ STORAGE_AGE=P14D
 
 MQTT_ENABLE=1
 MQTT_TOPIC=my/topic/mycam1
+
+MQTT_TOPIC_RECORD=my/topic/mycam1
+MQTT_TOPIC_AVAILABLE=my/topic/mycam1/available
+MQTT_TOPIC_ENABLE=my/topic/mycam1/enable
+
 MQTT_CONTROL_TOPIC_ENABLE=my/topic/mycam1/enable
 MQTT_CONTROL_TOPIC_RECORD=my/topic/mycam1/record
+MQTT_CONTROL_OPTIONS_TOPIC=my/topic/mycam1/set
+
 MQTT_TOPIC_VALUE_ON=1
 MQTT_TOPIC_VALUE_OFF=0
 MQTT_CONTROL_VALUE_ON=1
