verbose level for logging

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+VERBOSE=1
+DEBUG=1
 PROJECT_NAME=ffmpeg-rekorder
 DOCKER_COMPOSE_SOURCE=https://github.com/docker/compose/releases/download/v2.12.2/docker-compose-linux-armv7
 HOST_STORE_ROOT_PATH=/mnt/sdX/changeme
