readme, web server, mqtt fix

--- a/app/config/example.conf
+++ b/app/config/example.conf
@@ -1,10 +1,21 @@
 # for development
-DEBUG=true
+DEBUG=1
+# absolute path and filename to the ffmpeg binary
+FFMPEG_BINARY=/usr/local/bin/ffmpeg
+
+# relative from app path
+STREAMS_CONFIG_PATH=config/streams
 
 # webserver
 SERVER_PORT=3000
 
 # MQTT
+MQTT_ENABLE=1
 MQTT_HOST=myhost
 MQTT_PORT=1886
 MQTT_CLIENT_ID=rekorder
+
+# https://tc39.es/proposal-temporal/docs/duration.html
+# ISO 8601 using here AND WITH the P at the beginning !
+# P29DT11H means 29 days and 11 hours
+STORAGE_AGE=P29DT11H
